--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -9,6 +9,25 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div style='border:2px solid black; height:80vh; width:80vw;'>
+    This box should have a grid under it
+
+      <ngx-widget-grid [rows]="20" [columns]="20" [highlightNextPosition]="false"
+      [showGrid]="true" (widgetPositionChange)="onWidgetChange($event)">
+
+      <ngx-widget [(position)]="{top: 2,left: 2,height: 1,width: 1}"
+      [movable]="true" [resizable]="true">
+
+      <div style="height:100%;width:100%; display:flex;">
+        <div style="height:50%;width:50%; padding:10px; background-color: rgb(140, 198, 0);">
+        </div>
+      </div>
+
+      </ngx-widget>
+      </ngx-widget-grid>
+  </div>
+  
+
+<!-- <app-root></app-root> -->
 </body>
 </html>
